@@ -1,23 +1,27 @@
 package notblank.boatvote.domain.survey.service;
 
 import lombok.RequiredArgsConstructor;
-import notblank.boatvote.domain.survey.dto.request.NewSurveyRequest;
-import notblank.boatvote.domain.survey.dto.request.NewOptionRequest;
-import notblank.boatvote.domain.survey.dto.request.NewQuestionRequest;
+import notblank.boatvote.domain.survey.dto.internal.FilterDTO;
+import notblank.boatvote.domain.survey.dto.internal.SurveyInfoDTO;
+import notblank.boatvote.domain.survey.dto.request.CreateSurveyRequest;
+import notblank.boatvote.domain.survey.dto.internal.OptionDTO;
+import notblank.boatvote.domain.survey.dto.internal.QuestionDTO;
 import notblank.boatvote.domain.question.entity.Option;
 import notblank.boatvote.domain.question.entity.Question;
-import notblank.boatvote.domain.survey.dto.response.SurveyInfoResponse;
+import notblank.boatvote.domain.survey.dto.response.SurveyResponse;
 import notblank.boatvote.domain.survey.entity.Survey;
 import notblank.boatvote.domain.survey.repository.SurveyRepository;
-import notblank.boatvote.domain.survey.utility.CodeConverter;
+import notblank.boatvote.domain.utility.CodeConverter;
+import notblank.boatvote.domain.utility.DTOConverter;
 import notblank.boatvote.domain.user.entity.User;
 import notblank.boatvote.domain.user.service.UserService;
+import notblank.boatvote.global.exception.errorcode.SurveyErrorCode;
+import notblank.boatvote.global.exception.exception.SurveyException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,29 +30,20 @@ public class SurveyService {
 
     private final SurveyRepository surveyRepository;
 
-    private final CodeConverter codeConverter;
+    private final DTOConverter dtoConverter;
+
+    // 설문 조회
+    @Transactional(readOnly = true)
+    public Survey getSurveyEntityById(int id){
+        return surveyRepository.findById(id)
+                .orElseThrow(()-> new SurveyException(SurveyErrorCode.SURVEY_NOT_FOUND));
+    }
 
     // 새로운 설문 추가
     @Transactional
-    public int addNewSurvey(NewSurveyRequest newSurveyRequest){
-
-        User owner = userService.findById(newSurveyRequest.ownerId());
-
-        Survey survey = Survey.builder()
-                .owner(owner)
-                .title(newSurveyRequest.title())
-                .description(newSurveyRequest.description())
-                .imgUrl(newSurveyRequest.imgUrl())
-                .duration(newSurveyRequest.duration())
-                .maxHeadCnt(newSurveyRequest.maxHeadCnt())
-                .currentHeadCnt(0)
-                .regionCode(codeConverter.convertRegionListToRegionCode(newSurveyRequest.regionList()))
-                .jobCode(codeConverter.convertJobListToJobCode(newSurveyRequest.jobList()))
-                .ageCode(codeConverter.convertAgeListToAgeCode(newSurveyRequest.ageList()))
-                .genderCode(codeConverter.convertGenderListToGenderCode(newSurveyRequest.genderList()))
-                .point(100) // 포인트는 우리가 알아서 넣어줘야함
-                .questionList(getQuestionList(newSurveyRequest.questionList()))
-                .build();
+    public int addNewSurvey(CreateSurveyRequest createSurveyRequest){
+        User owner = userService.findById(createSurveyRequest.surveyInfo().uid());
+        Survey survey = dtoConverter.toSurveyEntity(createSurveyRequest, owner);
 
         surveyRepository.save(survey);
 
@@ -58,23 +53,11 @@ public class SurveyService {
         return survey.getId();
     }
 
-    // SurveyInfoResponse 를 return
+    // 설문 엔티티를 SurveyInfoResponse 로 반환
     @Transactional(readOnly = true)
-    public SurveyInfoResponse getSurveyInfoResponseById(int id){
-        Survey survey = surveyRepository.findById(id).orElseThrow();
-        return SurveyInfoResponse.toResponse(
-                survey,
-                codeConverter.convertRegionCodeToList(survey.getRegionCode()),
-                codeConverter.convertJobCodeToList(survey.getJobCode()),
-                codeConverter.convertAgeCodeToList(survey.getAgeCode()),
-                codeConverter.convertGenderCodeToList(survey.getGenderCode())
-                );
-    }
-
-    // Survey Entity 를 return
-    @Transactional(readOnly = true)
-    public Survey getSurveyEntityById(int id){
-        return surveyRepository.findById(id).orElseThrow();
+    public SurveyResponse getSurveyResponseById(int id){
+        Survey survey = getSurveyEntityById(id);
+        return dtoConverter.toSurveyResponse(survey);
     }
 
     // 설문에 참여했을때 해당 설문의 currentHeadCnt를 1 증가시키는 함수
@@ -85,8 +68,8 @@ public class SurveyService {
 
     // 특정 유저가 참여가능한 설문 조사
     @Transactional(readOnly = true)
-    public List<SurveyInfoResponse> getAvailableSurveys(int participantId) {
-        User participant = userService.findById(participantId);
+    public List<SurveyResponse> getAvailableSurveys(int uid) {
+        User participant = userService.findById(uid);
 
         int participantRegionCode = participant.getRegionCode();
         int participantJobCode = participant.getJobCode();
@@ -95,44 +78,17 @@ public class SurveyService {
 
         return surveyRepository.findAvailableSurveyByParticipant(participantRegionCode, participantJobCode, participantAgeCode, participantGenderCode)
                 .stream()
-                .map(survey -> {
-                    return SurveyInfoResponse.toResponse(
-                            survey,
-                            codeConverter.convertRegionCodeToList(survey.getRegionCode()),
-                            codeConverter.convertJobCodeToList(survey.getJobCode()),
-                            codeConverter.convertAgeCodeToList(survey.getAgeCode()),
-                            codeConverter.convertGenderCodeToList(survey.getGenderCode())
-                    );
-                })
-                .collect(Collectors.toList());
+                .map(dtoConverter::toSurveyResponse)
+                .toList();
     }
 
-    // Survey 에 집어넣을 QuestionList return
-    private List<Question> getQuestionList(List<NewQuestionRequest> newQuestionRequestList){
-        List<Question> questionList = new ArrayList<>();
-        for(NewQuestionRequest newQuestionRequest : newQuestionRequestList){
-            Question curQuestion = Question.builder()
-                    .title(newQuestionRequest.title())
-                    .isMultipleAnswer(newQuestionRequest.isMultipleAnswer())
-                    .type(newQuestionRequest.questionType())
-                    .build();
+    @Transactional(readOnly = true)
+    public List<SurveyResponse> getRequestedSurveys(int uid) {
+        User owner = userService.findById(uid);
 
-            curQuestion.getOptionList().addAll(getOptionList(newQuestionRequest.optionList()));
-
-            questionList.add(curQuestion);
-        }
-        return questionList;
-    }
-
-    // Question 에 집어넣을 OptionList return
-    private List<Option> getOptionList(List<NewOptionRequest> newOptionRequestList){
-        List<Option> optionList = new ArrayList<>();
-        for (NewOptionRequest curNewOptionRequest : newOptionRequestList) {
-            Option option = Option.builder()
-                    .text(curNewOptionRequest.text())
-                    .build();
-            optionList.add(option);
-        }
-        return optionList;
+        return surveyRepository.getRequestedSurvey(uid)
+                .stream()
+                .map(dtoConverter::toSurveyResponse)
+                .toList();
     }
 }
